Theming: Fix preview and center alignment of logo

--- a/core/css/header.css
+++ b/core/css/header.css
@@ -82,6 +82,7 @@
 	display: inline-block;
 	background-image: url('../img/logo-icon.svg');
 	background-repeat: no-repeat;
+	background-position: center center;
 	width: 62px;
 	height: 34px;
 }
